--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -204,7 +204,7 @@ pre {
 }
 
 /* line 107, ../sass/screen.sass */
-code, kbd, textarea, select {
+code, kbd, textarea, select, .textarea{
   font: 14px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
   background: rgba(0, 0, 0, 0.4);
   -webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1), inset 0 2px 6px 2px black;
@@ -1122,7 +1122,7 @@ ul.description {
 
 	border:1px solid #5b8821;
 
-	margin:0 5px 0 35px;
+	margin:0 5px 0 30px;
 }
 .button_modal.red {
 	background: -webkit-linear-gradient(top,  rgba(248,114,136,1) 0%,rgba(243,71,85,1) 90%,rgba(225,65,77,1) 95%,rgba(206,59,70,1) 100%);
